<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.SendDocumentsActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/add_a_photo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/text_send_documents_documents"
        android:textColor="@color/black_color"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="25dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:text="@string/type_document"
        android:textColor="@color/black_color"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="50dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number_document"

        android:inputType="number"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="235dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/badge"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="235dp" />

</androidx.constraintlayout.widget.ConstraintLayout>